--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <!--external fronts-->
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+
     <link href="assets/style/style.css " rel="stylesheet">
+
     <style>
         body > main > div:nth-child(1)>div#homeImg {
             background-image: url("assets/img/home.png");
@@ -87,6 +89,29 @@
                 placeat quam recusandae vitae! Ab dolorem enim error excepturi explicabo, mollitia numquam ratione sit!
                 Dolorem tempora temporibus tenetur!
             </p>
+        </div>
+    </div>
+
+    <!--Services-->
+    <div class="row">
+        <dfn id="Services"></dfn>
+        <h2>Services</h2>
+        <div class="col-4">
+            <h2 class="text-center">With Driver</h2>
+            <p class="mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam est, excepturi fugiat nihil perferendis
+                quae unde voluptas. Accusantium ducimus ex ipsam modi totam. Architecto dicta facilis quidem reiciendis.
+                Culpa, magnam.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate dolorum, eaque eum facere, iure
+                laboriosam maiores molestias nemo, neque nihil non officiis optio repellat totam ut voluptas
+                voluptatibus. Sequi, voluptatibus?</p>
+        </div>
+        <div class="col-4">
+            <h2 class="text-center">Self Drive</h2>
+            <p class="mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, assumenda at beatae blanditiis culpa
+                dolor earum eligendi, eveniet fugit iste nulla odit quis quos sunt veniam? Nesciunt quo sed totam!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet cupiditate dolor doloremque ea eius est
+                et, facere, illo minima minus necessitatibus nobis praesentium quae quis similique vero vitae. Eos,
+                tempore?</p>
         </div>
     </div>
 </main>
