--- a/index.html
+++ b/index.html
@@ -430,6 +430,90 @@
             </div>
         </div>
     </div>
+
+    <!--SingIn-->
+        <!--As a customer-->
+    <div class="row">
+        <dfn id="signInCustomer"></dfn>
+        <h2>SignIn Customer</h2>
+        <div></div>
+        <div>
+            <form>
+                <div class="row">
+                    <div class="col-6">
+                        <label for="nic">NIC Number</label>
+                        <input type="text" class="form-control" placeholder=" Enter National Identity Number" id="nic">
+                    </div>
+                    <div class="col-6">
+                        <label for="name">Full Name</label>
+                        <input type="text" class="form-control" placeholder="Enter Full Name" id="name">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <label for="userName">User Name</label>
+                        <input type="text" class="form-control" placeholder=" Enter User Name" id="userName">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" placeholder="Enter Password" id="password">
+                    </div>
+                    <div class="col-6">
+                        <label for="retypePassword">Retype password</label>
+                        <input type="password" class="form-control" placeholder=" Re type Password" id="retypePassword">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <label for="LiNumber">License Number</label>
+                        <input type="text" class="form-control" placeholder=" Enter License Number" id="LiNumber">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <label for="address">Address</label>
+                        <input type="text" class="form-control" placeholder=" Enter Address" id="address">
+                    </div>
+                    <div class="col-6">
+                        <label for="con_number">Contact Number</label>
+                        <input type="text" class="form-control" placeholder=" Enter Contact Number" id="con_number">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group col-md-6">
+                        <label for="InputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="pickUpdate">Today date</label>
+                        <input id="customer_regi_date" class="form-control" type="date" />
+                        <span id="customer_regi_dateSelected"></span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <form>
+                            <div class="form-group">
+                                <label for="License image">Add License image</label>
+                                <input type="file" class="form-control-file" id="License image">
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-6">
+                        <form>
+                            <div class="form-group">
+                                <label for="nic_img">Add National Identity image</label>
+                                <input type="file" class="form-control-file" id="nic_img">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </main>
 <footer></footer>
 
@@ -455,6 +539,12 @@
     time.addEventListener('change',(e)=>{
         let time = e.target.value
         document.getElementById('selectPickUpTime').innerText = time
+    })
+
+    let customer_regi_date = document.getElementById('customer_regi_date')
+    customer_regi_date.addEventListener('change',(e)=>{
+        let customer_regi_dateVal = e.target.value
+        document.getElementById('customer_regi_dateSelected').innerText = customer_regi_dateVal
     })
 </script>
 </body>
