SingIn driver Interface completed

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-4">
                         <form>
                             <div class="form-group">
                                 <label for="License image">Add License image</label>
@@ -502,7 +502,7 @@
                             </div>
                         </form>
                     </div>
-                    <div class="col-6">
+                    <div class="col-4">
                         <form>
                             <div class="form-group">
                                 <label for="nic_img">Add National Identity image</label>
@@ -510,7 +510,39 @@
                             </div>
                         </form>
                     </div>
+                    <button type="button" class="btn">Submit</button>
                 </div>
+            </form>
+        </div>
+    </div>
+        <!--As a driver-->
+    <div class="row">
+        <dfn id="signIndriver"></dfn>
+        <h2>SignIn Driver</h2>
+        <div></div>
+        <div>
+            <form>
+                <div class="row">
+                    <div class="col-6">
+                        <label for="D_nic">NIC Number</label>
+                        <input type="text" class="form-control" placeholder=" Enter National Identity Number" id="D_nic">
+                    </div>
+                    <div class="col-6">
+                        <label for="D_name">Full Name</label>
+                        <input type="text" class="form-control" placeholder="Enter Full Name" id="D_name">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <label for="D_license_number">License Number</label>
+                        <input type="text" class="form-control" placeholder=" Enter License Number" id="D_license_number">
+                    </div>
+                    <div class="col-6">
+                        <label for="D_con_number">Contact Number</label>
+                        <input type="text" class="form-control" placeholder="Enter Contact Number" id="D_con_number">
+                    </div>
+                </div>
+                <button type="button" class="btn">Submit</button>
             </form>
         </div>
     </div>
