--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                                         <div class="col-6">
                                             <label class="form-label">Brand</label>
                                             <br>
-                                            <select class="form-select form-select-ls" id="dropdown_addCar" aria-label=".form-select-lg example"></select>
+                                            <select class="form-select form-select-ls" id="dropdown_carBrand" aria-label=".form-select-lg example"></select>
                                         </div>
                                     </div>
                                     <div class="row">
